Added artwork and animation to MenuScreen

--- a/Jumper_Squish/game/export_presets.cfg
+++ b/Jumper_Squish/game/export_presets.cfg
@@ -25,7 +25,7 @@ application/code_sign_identity_release=""
 application/export_method_release=1
 application/name="Jumber_Squish"
 application/info="Made with Godot Engine"
-application/identifier="com.Koryslaby.Jumber_Squish"
+application/identifier="com.koryslaby.Jumber_Squish"
 application/signature=""
 application/short_version="1.0"
 application/version="1.0"
