--- a/Jumper_Squish/game/export_presets.cfg
+++ b/Jumper_Squish/game/export_presets.cfg
@@ -23,7 +23,7 @@ application/export_method_debug=1
 application/provisioning_profile_uuid_release=""
 application/code_sign_identity_release=""
 application/export_method_release=1
-application/name="Jumber_Squish"
+application/name="Jumper_Squish"
 application/info="Made with Godot Engine"
 application/identifier="com.koryslaby.Jumber_Squish"
 application/signature=""
